# Local-Automatic-Times-Updater-for-MKW

./: .gitignore  Cargo.toml  README.md  build_script.sh  cd_track_mapping.json  create_json_script.js  current_version  linux_build_script.sh  tauri.conf.json  windows_build_script.ps1
json/: cd_track_array.json  cd_track_mapping.json  create_chadsoft_json_script.js  create_json_script.js  mkwpp_combined.json  mkwpp_track_array.json
src/: files.rs  index.html  main.js  main.rs  sr.rs  styles.css  terminal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: files.rs  jsondata.rs  main.rs  sr.rs
