[package]
name = "LOCMKWUPD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
colored = "*"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
xargo = false
image = "test-image"
runner = "custom-runner"